--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Map Haldwani</title>
-        <link rel="stylesheet" href="/index.css" />
+        <link rel="stylesheet" href="./index.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="vendor/parallax.js"></script>
     </head>
