--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Map Haldwani</title>
-        <link rel="stylesheet" href="./index.css" />
+        <link rel="stylesheet" href="index.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="vendor/parallax.js"></script>
     </head>
     <body>
         <div class="header">
             <div class="headerContent">
-                <image src="/media/logo.png" width="50px"></image
+                <image src="media/logo.png" width="50px"></image
                 ><a>Map Haldwani</a>
             </div>
         </div>
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div id="firstRowBox2" class="tableContent">
-                    <img src="/media/roads.png" style="border-radius: 24px" />
+                    <img src="media/roads.png" style="border-radius: 24px" />
                 </div>
             </div>
             <div id="secondRow" class="topProgress">
@@ -82,7 +82,7 @@
                                 Learn more about data accuracy
                             </div>
                             <img
-                                src="/media/icons/arrowRight.svg"
+                                src="media/icons/arrowRight.svg"
                                 style="margin-left: 4px; height: 1em"
                             />
                         </a>
@@ -91,7 +91,7 @@
             </div>
         </div>
         <script>
-            $(".panImage").parallax({ imageSrc: "/media/mapPan.png" });
+            $(".panImage").parallax({ imageSrc: "media/mapPan.png" });
         </script>
         <div id="table2" class="tableLayout">
             <div class="tableContainer">
@@ -106,7 +106,7 @@
                                 Learn more about street imagey
                             </div>
                             <img
-                                src="/media/icons/arrowRight.svg"
+                                src="media/icons/arrowRight.svg"
                                 style="margin-left: 4px; height: 1em"
                             />
                         </a>
@@ -114,7 +114,7 @@
                 </div>
                 <div class="tableContent tableImage">
                     <img
-                        src="/media/mapillary.gif"
+                        src="media/mapillary.gif"
                         style="
                             border-radius: 1em;
                             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
@@ -128,7 +128,7 @@
             <div class="tableContainer">
                 <div class="tableContent tableImage">
                     <img
-                        src="/media/osm.png"
+                        src="media/icons/osm.svg"
                         style="
                             border-radius: 1em;
                             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2),
@@ -150,7 +150,7 @@
                                 Learn more about contributing data
                             </div>
                             <img
-                                src="/media/icons/arrowRight.svg"
+                                src="media/icons/arrowRight.svg"
                                 style="margin-left: 4px; height: 1em"
                             />
                         </a>
@@ -175,14 +175,14 @@
                                 Learn more about data providers
                             </div>
                             <img
-                                src="/media/icons/arrowRight.svg"
+                                src="media/icons/arrowRight.svg"
                                 style="margin-left: 4px; height: 1em"
                             />
                         </a>
                     </div>
                 </div>
                 <div class="tableContent tableImage">
-                    <img src="/media/opensource.png" />
+                    <img src="media/opensource.png" />
                 </div>
             </div>
         </div>
@@ -214,7 +214,7 @@
         </div>
         <script>
             $(".bottomContainer").parallax({
-                imageSrc: "/media/bottomBG.png",
+                imageSrc: "media/bottomBG.png",
             });
         </script>
         <footer class="footer">
