--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="topButtonContainer">
                         <a
                             class="topButton"
-                            href="https://mg-lsj.github.io/Map-Haldwani"
+                            href="https://map-haldwani.github.io/MapHaldwani/"
                             target="_blank"
                         >
                             <div class="topButtonText">Explore map</div>
@@ -203,14 +203,14 @@
                 <div class="bottomButtonContainer">
                     <a
                         class="bottomButtonMap"
-                        href="https://mg-lsj.github.io/Map-Haldwani"
+                        href="https://map-haldwani.github.io/MapHaldwani/"
                         target="_blank"
                     >
                         <div class="bottomButtonMapText">Explore map</div>
                     </a>
                     <a
                         class="bottomButtonSource"
-                        href="https://github.com/MG-LSJ/Map-Haldwani"
+                        href="https://github.com/Map-Haldwani/MapHaldwani"
                         target="_blank"
                     >
                         <div class="bottomButtonSourceText">View Source</div>
@@ -234,13 +234,13 @@
                 </div>
                 <a
                     class="footerColumnText"
-                    hrefhref="https://mg-lsj.github.io/Map-Haldwani"
+                    hrefhref="https://map-haldwani.github.io/MapHaldwani/"
                     target="_blank"
                     >Map</a
                 >
                 <a
                     class="footerColumnText"
-                    href="https://github.com/MG-LSJ/Map-Haldwani"
+                    href="https://github.com/Map-Haldwani/MapHaldwani"
                     target="_blank"
                     >Source Code</a
                 >
