--- a/street/index.html
+++ b/street/index.html
@@ -97,13 +97,13 @@
                 </div>
                 <a
                     class="footerColumnText"
-                    hrefhref="https://mg-lsj.github.io/Map-Haldwani"
+                    hrefhref="https://map-haldwani.github.io/MapHaldwani/"
                     target="_blank"
                     >Map</a
                 >
                 <a
                     class="footerColumnText"
-                    href="https://github.com/MG-LSJ/Map-Haldwani"
+                    href="https://github.com/Map-Haldwani/MapHaldwani"
                     target="_blank"
                     >Source Code</a
                 >
